--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>Lab-5a_Resolving_Merge_Conflicts</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>Line 10 added by Juan</p>
-<p></p>
+<p>Line 11 added by Juan</p>
 <p></p>
 <p></p>
 <p></p>
