--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>Line 10 added by Juan</p>
 <p>Line 11 added by Juan</p>
-<p></p>
+<p>Line 12 added by Waffles</p>
 <p></p>
 <p></p>
 <!-- deleted a line here <p>line added from feature branch</p> -->
