--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>Line 10 added by Juan</p>
 <p>Line 11 added by Juan</p>
 <p>Line 12 added by Waffles</p>
-<p></p>
+<p>Line 13 added by Waffles</p>
 <p></p>
 <!-- deleted a line here <p>line added from feature branch</p> -->
 </body>
