feature 1 and 2 added

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <h1>Lab-5a_Resolving_Merge_Conflicts</h1>
 <p>This is the first file in my new Git Repo.</p>
-<p>Line 10 added by Juan</p>
-<p>Line 11 added by Juan</p>
+<p>Feature 2</p>
+<p>Feature 1</p>
 <p>Line 12 changed again by Waffles</p>
 <p>Line 13 added by Waffles</p>
 <p></p>
