--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 <h1>Lab-5a_Resolving_Merge_Conflicts</h1>
 <p>This is the first file in my new Git Repo.</p>
-<p>Feature 1 modified by Juan</p>
-<p>Feature 2 modified by Juan</p>
-<p>Line 12 changed again by Waffles</p>
-<p>Feature 3 by Juan</p>
+<p>Feature 1 modified by Waffles</p>
+<p>Feature 2 modified by Waffles</p>
+<p>Feature 3 added</p>
+<p>Feature 4 added</p>
 <p></p>
 <!-- deleted a line here <p>line added from feature branch</p> -->
 </body>
